--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -654,6 +654,10 @@ td {
 }
 
 @media (max-width: 767px) {
+  .mobile-order-first{
+    order: -1;
+  }
+
   .md-text-right{
     text-align: right;
   }
@@ -848,12 +852,13 @@ td {
   display: none;
   width: 100%;
   border: 1px solid #ccc;
-  max-height: 100px;
+  max-height: 200px;
   overflow-y: auto;
   position: absolute;
   background-color: white;
   z-index: 1000;
   border-radius: 0.275rem;
+  box-shadow: 0 .15rem 1.75rem 0 rgba(58, 59, 69, .15) !important
 }
 
 .dropdown-option {
