--- a/views/salesdetails/salesdetails.ejs
+++ b/views/salesdetails/salesdetails.ejs
@@ -1,4 +1,5 @@
-<div class="modal fade " id="sales-details-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade " id="sales-details-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header custom-bg">
@@ -14,22 +15,23 @@
                     </div>
                     <div class="card-body">
                         <div class="table-responsive scrollable-table-container">
-                            <table class="table table-bordered custom-mobile-table" id="category-dataTable" width="100%" cellspacing="10">
+                            <table class="table table-bordered custom-mobile-table" id="category-dataTable" width="100%"
+                                cellspacing="10">
                                 <thead class="table-header">
                                     <tr>
-                                        <th class = "col-1">Details ID</th>
-                                        <th class = "col-3">Date</th>
-                                        <th class = "col-3">Items</th>
-                                        <th class = "col-2">price</th>
-                                        <th class = "col-1">Quantity</th>
-                                        <th class = "col-2">Total</th>               
+                                        <th class="col-1">Details ID</th>
+                                        <th class="col-3">Date</th>
+                                        <th class="col-3">Items</th>
+                                        <th class="col-2">price</th>
+                                        <th class="col-1">Quantity</th>
+                                        <th class="col-2">Total</th>
                                     </tr>
-                                </thead>          
+                                </thead>
                                 <tbody>
                                 </tbody>
                             </table>
                         </div>
-                        
+
                     </div>
                 </div>
             </div>
@@ -42,114 +44,122 @@
 
 <div class="container-fluid">
     <div class="row mb-2">
-        <div class="col-lg-12">
-            <div class="card">
+        <div class="col-md-9">
+            <div class="card shadow mb-4 cardbody-size-sales-details">
+                <div class="progress progress-sm mb-2">
+                    <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
+                        aria-valuemax="100">
+                    </div>
+                </div>
+                <div class="card-header py-3 header-bg">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h6 class="mt-2 font-weight-bold table-title">Sales Details Data:</h6>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="input-group">
+                                <input autocomplete="off" type="text" class="form-control bg-light small"
+                                    placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2"
+                                    id="search-input">
+                                <div class="input-group-append">
+                                    <button class="btn sis-btn-color" type="button" id="search-button">
+                                        <i class="fas fa-search fa-sm"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive scroll-cardbody-size-sales-details border">
+                        <table class="table table-bordered custom-mobile-table" id="salesdetail-dataTable" width="100%"
+                            cellspacing="10">
+                            <thead class="table-header">
+                                <tr>
+                                    <th class="text-left">Details ID</th>
+                                    <th class="text-left">Cashier</th>
+                                    <th class="text-left">Branch</th>
+                                    <th class="text-left">Date</th>
+                                    <th class="text-left">POS ID</th>
+                                    <th class="text-left">Shift</th>
+                                    <th class="text-left">Payment Type</th>
+                                    <th class="text-left w-15">Total</th>
+                                    <th class="text-left w-15">Status</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div id="pagination-container"></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 mobile-order-first mb-1">
+            <div class="card shadow">
                 <div class="card-header py-3 header-bg">
                     <h6 class="m-0 font-weight-bold">Sales Details Filter</h6>
                 </div>
                 <div class="card-body extend">
                     <div class="row mb-2">
-                        <div class="col-md-6 mmb">
+                        <div class="col-md-12 mmb">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text label-width" id="basic-addon2">Date:</span>
                                 </div>
-                                <input autocomplete="off" id="dateRange" name="dateRange" type="text" class="form-control" placeholder="Select Date Range" aria-describedby="basic-addon1">
+                                <input autocomplete="off" id="dateRange" name="dateRange" type="text" class="form-control"
+                                    placeholder="Select Date Range" aria-describedby="basic-addon1">
                             </div>
-                        </div>                        
-                        <div class="col-md-6">
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-md-12">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text label-width" id="basic-addon2">POS:</span>
                                 </div>
-                                <input autocomplete="off" id="posid" name="posid" type="text" class="form-control" placeholder="Enter POS ID" aria-label="fullname" aria-describedby="basic-addon1">
+                                <input autocomplete="off" id="posid" name="posid" type="text" class="form-control"
+                                    placeholder="Enter POS ID" aria-label="fullname" aria-describedby="basic-addon1">
                             </div>
                         </div>
                     </div>
-                    <div class="row justify-content-center">
-                        <div class="col-md-6">
+                    <div class="row mb-2">
+                        <div class="col-md-12">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text label-width" id="basic-addon2">Shift:</span>
                                 </div>
-                                <input autocomplete="off" id="shift" name="shift" type="text" class="form-control" placeholder="Enter Shift" aria-label="fullname" aria-describedby="basic-addon1">
+                                <input autocomplete="off" id="shift" name="shift" type="text" class="form-control"
+                                    placeholder="Enter Shift" aria-label="fullname" aria-describedby="basic-addon1">
                             </div>
                         </div>
                     </div>
-                    <div class="row d-flex justify-content-end mt-1">
-                        <div class="col-md-2 mt-2">
+                    <div class="row mb-2">
+                        <div class="col-md-12">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="basic-addon2">Entries</span>
                                 </div>
                                 <select class="form-control text-center" name="numberdisplay" id="numberdisplay">
-                                    <option value="10">10</option>
                                     <option value="25">25</option>
                                     <option value="50">50</option>
                                     <option value="100">100</option>
                                 </select>
                             </div>
                         </div>
-                        <div class="col-md-2 mt-2 align">
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
                             <button id="addBtn" name="addBtn" class="btn btn-outline-inventory shadow-sm w-100">
                                 <i class="fa fa-plus" aria-hidden="true"></i>
                                 Filter
                             </button>
-                            
-                        </div>
-                    </div>
-                </div>      
-            </div>
-        </div>
-    </div>
-
-    <div class="card shadow mb-4 cardbody-size-sales-details">
-        <div class="progress progress-sm mb-2">
-            <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
-                aria-valuemax="100">
-            </div>
-        </div>
-        <div class="card-header py-3 header-bg">
-            <div class="row">
-                <div class="col-md-6">
-                    <h6 class="mt-2 font-weight-bold table-title">Sales Details Data:</h6>
-                </div>
-                <div class="col-md-6">
-                    <div class="input-group">
-                        <input autocomplete="off" type="text" class="form-control bg-light small" placeholder="Search for..."
-                            aria-label="Search" aria-describedby="basic-addon2" id="search-input">
-                        <div class="input-group-append">
-                            <button class="btn sis-btn-color" type="button" id="search-button">
-                                <i class="fas fa-search fa-sm"></i>
-                            </button>
+    
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="card-body">
-            <div class="table-responsive scroll-cardbody-size-sales-details border">
-                <table class="table table-bordered custom-mobile-table" id="salesdetail-dataTable" width="100%"
-                    cellspacing="10">
-                    <thead class="table-header">
-                        <tr>
-                            <th>Details ID</th>
-                            <th>Date</th>
-                            <th>POS ID</th>
-                            <th>Branch ID</th>
-                            <th>Shift</th>
-                            <th>Payment Type</th>
-                            <th>Description</th>
-                            <th>Total</th>
-                            <th>Cashier</th>
-                            <th>Status</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
-            </div>
-            <div id="pagination-container"></div>
-        </div>
     </div>
+   
