--- a/views/salesdetails/salesdetailsscripts.ejs
+++ b/views/salesdetails/salesdetailsscripts.ejs
@@ -206,27 +206,22 @@
                 tableBody.innerHTML = '';
 
                 currentPageData.forEach(item => {
-                    const descriptionArray = JSON.parse(item.description);
                     let action = ``;
                     if (item.status === 'SOLD') {
                         action = `
                         <span class="editbutton" id="editBtn" name="editBtn" data-toggle="modal" data-target="#accessModal"><i class="fas fa-edit" style="color: rgb(99, 115, 129);"></i></span>`
                     }
-                    const newDescription = descriptionArray
-                        .map(item => `Name: ${item.name}, Quantity: ${item.quantity}, Price: ₱${item.price}`)
-                        .join('<br>');
 
                     const tr = document.createElement('tr');
                     tr.innerHTML = `
-                        <td class="custom-mobile-align bmss-link" data-toggle="modal" data-target="#sales-details-modal" data-label="Detail ID">${item.detailid}</td>
-                        <td class="custom-mobile-align responsive-wrap" data-label="Date">${item.date}</td>
-                        <td class="custom-mobile-align" data-label="POS ID">${item.posid}</td>
-                        <td class="custom-mobile-align" data-label="POS ID">${item.branch}</td>
-                        <td class="custom-mobile-align" data-label="Shift">${item.shift}</td>
-                        <td class="custom-mobile-align" data-label="Payment Type">${item.paymenttype}</td>
-                        <td class="responsive-wrap">${newDescription}</td>
-                        <td class="custom-mobile-align" data-label="Total">${formatCurrency(item.total)}</td>
-                        <td class="custom-mobile-align responsive-wrap" data-label="Cashier">${item.cashier}</td>
+                        <td class="custom-mobile-align text-left bmss-link" data-toggle="modal" data-target="#sales-details-modal" data-label="Detail ID">${item.detailid}</td>
+                        <td class="custom-mobile-align text-left responsive-wrap" data-label="Cashier">${item.cashier}</td>
+                        <td class="custom-mobile-align text-left" data-label="POS ID">${item.branch}</td>
+                        <td class="custom-mobile-align text-left responsive-wrap" data-label="Date">${item.date}</td>
+                        <td class="custom-mobile-align text-left" data-label="POS ID">${item.posid}</td>
+                        <td class="custom-mobile-align text-left" data-label="Shift">${item.shift}</td>
+                        <td class="custom-mobile-align text-left" data-label="Payment Type">${item.paymenttype}</td>
+                        <td class="custom-mobile-align text-left" data-label="Total">${formatCurrency(item.total)}</td>
                         <td class="custom-mobile-align responsive-wrap" data-label="Status">${item.status}</td>
                         <td class="custom-mobile-align responsive-wrap" data-label="Action">${action}</td>
                     `;
