--- a/views/users/users.ejs
+++ b/views/users/users.ejs
@@ -46,117 +46,107 @@
 
 <!-- Begin PCreated by Content -->
 <div class="container-fluid">
-    <!-- Content Row -->
-    <div class="toggle-view">
-        <div class="row mb-2">
-            <div class="col-lg-12">
-                <div class="card">
-                    <div class="card-header py-3 header-bg">
-                        <h6 class="m-0 font-weight-bold">Users</h6>
-                    </div>
-                    <div class="card-body extend">
-                        <div class="row">
-                            <div class="col-md-6 mb-2">
-                                <div class="input-group">
-                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Access" name="access"
-                                        id="access" />
-                                    <input autocomplete="off" type="hidden" id="accessID" name="accessID" />
-                                    <div class="input-group-append">
-                                        <span class="input-group-text">Access Type</span>
-                                    </div>
-                                </div>
-                                <div class="custom-dropdown cdw-tableoption" id="accessDropdown"></div>
-                            </div>
-
-                            <div class="col-md-6">
-                                <div class="input-group">
-                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Branch" name="branch"
-                                        id="branch" />
-                                    <input autocomplete="off" type="hidden" id="branchID" name="branchID" />
-                                    <div class="input-group-append">
-                                        <span class="input-group-text">Branch</span>
-                                    </div>
-                                </div>
-                                <div class="custom-dropdown cdw-tableoption" id="branchDropdown"></div>
-                            </div>
-
-                        </div>
-                        <div class="row mb-2 justify-content-center">
-                            <div class="col-md-6">
-                                <div class="input-group">
-                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Employee" name="employee"
-                                        id="employee" />
-                                    <input autocomplete="off" type="hidden" id="employeeID" name="employeeID" />
-                                    <div class="input-group-append">
-                                        <span class="input-group-text">Employee</span>
-                                    </div>
-                                </div>
-                                <div class="custom-dropdown cdw-tableoption" id="employeeDropdown"></div>
-                            </div>
-                        </div>
-                        <div class="row d-flex justify-content-end mt-2">
-                            <div class="col-md-2 align">
-                                <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
-                                    <span id="btnIcon"><i class="fa fa-plus" aria-hidden="true"></i> Add</span>
-                                    <span id="btnSpinner" class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true"></span>
-                                </button>
-                            </div>
-                        </div>
-                    </div>      
+    <div class="row mb-2">
+        <div class="col-md-9">
+            <div class="card mb-4 cardbody-size-710">
+                <div class="progress progress-sm mb-2">
+                    <div class="progress-bar" role="progressbar" style="width: 0%"
+                        aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
-            </div>
-        </div>
-    </div>
-
-<!-- DataTales Example -->
-<div class="card mb-4 cardbody-size-710">
-    <div class="progress progress-sm mb-2">
-        <div class="progress-bar" role="progressbar" style="width: 0%"
-            aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-    <div class="card-header py-2 header-bg">
-        <div class="row">
-            <div class="col-md-4 d-flex mb-2">
-                <button id="toggleButton" name="toggleButton" class="btn btn-circle btn-outline-inventory ">
-                    <i class="fas fa-plus"></i>
-                </button>
-                <h6 class="mt-2 ml-3 font-weight-bold table-title">Users Data</h6> 
-            </div>
-            <div class="col-md-8">
-                <div class="input-group">
-                    <input autocomplete="off" type="text" class="form-control bg-light small"
-                        placeholder="Search for..." aria-label="Search"
-                        aria-describedby="basic-addon2" id="search-input">
-                    <div class="input-group-append">
-                        <button class="btn sis-btn-color" type="button" id="search-button">
-                            <i class="fas fa-search fa-sm"></i>
-                        </button>
+                <div class="card-header py-2 header-bg">
+                    <div class="row justify-content-end">
+                        <div class="col-md-8">
+                            <div class="input-group">
+                                <input autocomplete="off" type="text" class="form-control bg-light small"
+                                    placeholder="Search for..." aria-label="Search"
+                                    aria-describedby="basic-addon2" id="search-input">
+                                <div class="input-group-append">
+                                    <button class="btn sis-btn-color" type="button" id="search-button">
+                                        <i class="fas fa-search fa-sm"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-    <div class="card-body">
-        <div class="table-responsive scroll-cardbody-size-710 border">
-            <table class="table table-bordered custom-mobile-table" id="users-dataTable" width="100%" cellspacing="10">
-                <thead class="table-header">
-                    <tr>
-                        <th>User Code</th>
-                        <th>Employee ID</th>
-                        <th>Access Type</th>
-                        <th>Username</th>
-                        <th>Branch ID</th>
-                        <th>Created by</th>
-                        <th>Created date</th>
-                        <th class = "col-1">Status</th>
-                        <th class = "col-1"></th>               
-                    </tr>
-                </thead>
+                <div class="card-body">
+                    <div class="table-responsive scroll-cardbody-size-710 border">
+                        <table class="table table-bordered custom-mobile-table" id="users-dataTable" width="100%" cellspacing="10">
+                            <thead class="table-header">
+                                <tr>
+                                    <th>User Code</th>
+                                    <th>Employee ID</th>
+                                    <th>Access Type</th>
+                                    <th>Username</th>
+                                    <th>Branch ID</th>
+                                    <th>Created by</th>
+                                    <th>Created date</th>
+                                    <th class = "col-1">Status</th>
+                                    <th class = "col-1"></th>               
+                                </tr>
+                            </thead>
+                                
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
                     
-                <tbody>
-                </tbody>
-            </table>
+                </div>
+            </div>
         </div>
-        
+        <div class="col-md-3 mobile-order-first mb-2">
+            <div class="card shadow">
+                <div class="card-body extend">
+                    <h5 class="m-0 font-weight-bold py-3">Add Users</h5>
+
+                    <div class="row">
+                        <div class="col-md-12 mb-2">
+                            <div class="input-group">
+                                <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Access" name="access"
+                                    id="access" />
+                                <input autocomplete="off" type="hidden" id="accessID" name="accessID" />
+                                <div class="input-group-append">
+                                    <span class="input-group-text">Access</span>
+                                </div>
+                            </div>
+                            <div class="custom-dropdown cdw-tableoption" id="accessDropdown"></div>
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-md-12">
+                            <div class="input-group">
+                                <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Branch" name="branch"
+                                    id="branch" />
+                                <input autocomplete="off" type="hidden" id="branchID" name="branchID" />
+                                <div class="input-group-append">
+                                    <span class="input-group-text">Branch</span>
+                                </div>
+                            </div>
+                            <div class="custom-dropdown cdw-tableoption" id="branchDropdown"></div>
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-md-12">
+                            <div class="input-group">
+                                <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Employee" name="employee"
+                                    id="employee" />
+                                <input autocomplete="off" type="hidden" id="employeeID" name="employeeID" />
+                                <div class="input-group-append">
+                                    <span class="input-group-text">Employee</span>
+                                </div>
+                            </div>
+                            <div class="custom-dropdown cdw-tableoption" id="employeeDropdown"></div>
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-md-12">
+                            <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
+                                <span id="btnIcon"><i class="fa fa-plus" aria-hidden="true"></i> Add</span>
+                                <span id="btnSpinner" class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true"></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>      
+            </div>
+        </div>
     </div>
-</div>
